feat:그룹 개인 한달 date 조회 user, group내 user 버전 api